Updated openapi documentation with bearer securityScheme
Also include changes to postman collection
ErrorMessage change and
Screenshot updates for swagger-ui
